@@ -11,6 +11,7 @@ import ru.practicum.shareit.booking.State;
 import ru.practicum.shareit.booking.Status;
 import ru.practicum.shareit.booking.dto.BookingDtoInput;
 import ru.practicum.shareit.booking.dto.BookingDtoOutput;
+import ru.practicum.shareit.exception.AccessException;
 import ru.practicum.shareit.exception.NotFoundCustomException;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.exception.ValidateException;
@@ -203,7 +204,7 @@ class BookingServiceImplTest {
 
         assertThrows(
                 NotFoundException.class,
-                () -> bookingService.getAllByUser(id, State.ALL)
+                () -> bookingService.getAllByUser(id, State.ALL,0, 10)
         );
     }
 
@@ -212,12 +213,12 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-one-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByUserIfStateIsWaiting() {
-        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.WAITING);
+        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.WAITING, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.WAITING);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.WAITING);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
     }
 
     @Test
@@ -225,12 +226,12 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-rejected-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByUserIfStateIsRejected() {
-        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.REJECTED);
+        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.REJECTED, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.REJECTED);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.REJECTED);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
     }
 
     @Test
@@ -238,14 +239,14 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-past-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByUserIfStateIsPast() {
-        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.PAST);
+        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.PAST, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.WAITING);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
-        assertTrue(actual.get(0).getStart().isBefore(LocalDateTime.now()));
-        assertTrue(actual.get(0).getEnd().isBefore(LocalDateTime.now()));
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.WAITING);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
+        assertTrue(actual.getFirst().getStart().isBefore(LocalDateTime.now()));
+        assertTrue(actual.getFirst().getEnd().isBefore(LocalDateTime.now()));
     }
 
     @Test
@@ -253,14 +254,14 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-one-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByUserIfStateIsAll() {
-        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.ALL);
+        List<BookingDtoOutput> actual = bookingService.getAllByUser(1L, State.ALL, 0, 1);
 
         assertThat(actual).isNotNull();
-        assertEquals(7L, actual.get(0).getId());
-        assertEquals(LocalDateTime.of(2023, 1, 20, 12, 0), actual.get(0).getStart());
-        assertEquals(LocalDateTime.of(2023, 2, 15, 12, 0), actual.get(0).getEnd());
-        assertEquals(3L, actual.get(0).getItem().getId());
-        assertEquals(1L, actual.get(0).getBooker().getId());
+        assertEquals(7L, actual.getFirst().getId());
+        assertEquals(LocalDateTime.of(2023, 1, 20, 12, 0), actual.getFirst().getStart());
+        assertEquals(LocalDateTime.of(2023, 2, 15, 12, 0), actual.getFirst().getEnd());
+        assertEquals(3L, actual.getFirst().getItem().getId());
+        assertEquals(1L, actual.getFirst().getBooker().getId());
     }
 
     @Test
@@ -268,12 +269,12 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-one-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByOwnerIfStateIsWaiting() {
-        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.WAITING);
+        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.WAITING, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.WAITING);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.WAITING);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
     }
 
     @Test
@@ -281,12 +282,12 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-rejected-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByOwnerIfStateIsRejected() {
-        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.REJECTED);
+        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.REJECTED, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.REJECTED);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.REJECTED);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
     }
 
     @Test
@@ -294,14 +295,14 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-past-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByOwnerIfStateIsPast() {
-        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.PAST);
+        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.PAST, 0, 1);
 
-        assertEquals(actual.get(0).getId(), 7L);
-        assertEquals(actual.get(0).getStatus(), Status.WAITING);
-        assertEquals(actual.get(0).getItem().getId(), 3L);
-        assertEquals(actual.get(0).getBooker().getId(), 1L);
-        assertTrue(actual.get(0).getStart().isBefore(LocalDateTime.now()));
-        assertTrue(actual.get(0).getEnd().isBefore(LocalDateTime.now()));
+        assertEquals(actual.getFirst().getId(), 7L);
+        assertEquals(actual.getFirst().getStatus(), Status.WAITING);
+        assertEquals(actual.getFirst().getItem().getId(), 3L);
+        assertEquals(actual.getFirst().getBooker().getId(), 1L);
+        assertTrue(actual.getFirst().getStart().isBefore(LocalDateTime.now()));
+        assertTrue(actual.getFirst().getEnd().isBefore(LocalDateTime.now()));
     }
 
     @Test
@@ -309,14 +310,14 @@ class BookingServiceImplTest {
             @Sql(value = {"before-with-one-booking.sql"}, executionPhase = BEFORE_TEST_METHOD)
     })
     void shouldByOwnerIfStateIsAll() {
-        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.ALL);
+        List<BookingDtoOutput> actual = bookingService.getAllByOwner(1L, State.ALL, 0, 1);
 
         assertThat(actual).isNotNull();
-        assertEquals(7L, actual.get(0).getId());
-        assertEquals(LocalDateTime.of(2023, 1, 20, 12, 0), actual.get(0).getStart());
-        assertEquals(LocalDateTime.of(2023, 2, 15, 12, 0), actual.get(0).getEnd());
-        assertEquals(3L, actual.get(0).getItem().getId());
-        assertEquals(1L, actual.get(0).getBooker().getId());
+        assertEquals(7L, actual.getFirst().getId());
+        assertEquals(LocalDateTime.of(2023, 1, 20, 12, 0), actual.getFirst().getStart());
+        assertEquals(LocalDateTime.of(2023, 2, 15, 12, 0), actual.getFirst().getEnd());
+        assertEquals(3L, actual.getFirst().getItem().getId());
+        assertEquals(1L, actual.getFirst().getBooker().getId());
     }
 
     @Test
@@ -350,7 +351,7 @@ class BookingServiceImplTest {
         long id = 99L;
 
         assertThrows(
-                NotFoundCustomException.class,
+                AccessException.class,
                 () -> bookingService.updateStatusOfBooking(id, 7L, true)
         );
     }
@@ -367,180 +368,3 @@ class BookingServiceImplTest {
         );
     }
 }
-
-
-
-
-//package ru.practicum.shareit.booking.service;
-//
-//import org.junit.jupiter.api.BeforeEach;
-//import org.junit.jupiter.api.Test;
-//import org.junit.jupiter.api.extension.ExtendWith;
-//import org.mockito.*;
-//import org.mockito.junit.jupiter.MockitoExtension;
-//import ru.practicum.shareit.booking.Status;
-//import ru.practicum.shareit.booking.dto.BookingDtoInput;
-//import ru.practicum.shareit.booking.dto.BookingDtoOutput;
-//import ru.practicum.shareit.booking.dto.BookingMapper;
-//import ru.practicum.shareit.booking.model.Booking;
-//import ru.practicum.shareit.booking.repository.BookingRepository;
-//import ru.practicum.shareit.exception.NotFoundException;
-//import ru.practicum.shareit.exception.ValidateException;
-//import ru.practicum.shareit.item.dto.ItemDtoIdAndName;
-//import ru.practicum.shareit.item.model.Item;
-//import ru.practicum.shareit.item.repository.ItemRepository;
-//import ru.practicum.shareit.user.User;
-//import ru.practicum.shareit.user.dto.UserDtoIdAndName;
-//import ru.practicum.shareit.user.repository.UserRepository;
-//
-//import static org.mockito.Mockito.*;
-//import static org.junit.jupiter.api.Assertions.*;
-//
-//import java.time.LocalDateTime;
-//import java.time.temporal.ChronoUnit;
-//import java.util.*;
-//
-//@ExtendWith(MockitoExtension.class)
-//class BookingServiceImplTest {
-//
-//    @Mock
-//    private BookingRepository bookingRepository;
-//
-//    @Mock
-//    private UserRepository userRepository;
-//
-//    @Mock
-//    private ItemRepository itemRepository;
-//
-//    @Mock
-//    private BookingMapper bookingMapper;
-//
-//    @InjectMocks
-//    private BookingServiceImpl bookingService;
-//
-//    private User user;
-//    private User owner;
-//    private Item item;
-//    private Booking booking;
-//    private BookingDtoInput inputDto;
-//    private BookingDtoOutput outputDto;
-//
-//    @BeforeEach
-//    void setUp() {
-//        user = new User();
-//        user.setId(1L);
-//
-//        owner = new User();
-//        owner.setId(2L);
-//
-//        item = new Item();
-//        item.setId(10L);
-//        item.setAvailable(true);
-//        item.setOwner(owner);
-//
-//        booking = new Booking();
-//        booking.setId(100L);
-//        booking.setItem(item);
-//        booking.setBooker(user);
-//        booking.setStatus(Status.WAITING);
-//
-//        inputDto = createSampleBookingDtoInput();
-//        inputDto.setItemId(item.getId());
-//        inputDto.setStart(LocalDateTime.now().plusDays(1));
-//        inputDto.setEnd(LocalDateTime.now().plusDays(2));
-//
-//        outputDto = createSampleBookingDtoOutput(123L);
-//    }
-//
-//    private BookingDtoInput createSampleBookingDtoInput() {
-//        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.SECONDS);
-//        return new BookingDtoInput(
-//                now.plusDays(1),
-//                now.plusDays(2),
-//                123L // itemId
-//        );
-//    }
-//
-//    private BookingDtoOutput createSampleBookingDtoOutput(Long id) {
-//        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.SECONDS);
-//        ItemDtoIdAndName item = new ItemDtoIdAndName(123L, "Item Name");
-//        UserDtoIdAndName booker = new UserDtoIdAndName(1L, "User Name");
-//        return new BookingDtoOutput(
-//                id,
-//                now.plusDays(1),
-//                now.plusDays(2),
-//                item,
-//                booker,
-//                Status.WAITING
-//        );
-//    }
-//
-//    @Test
-//    void create_ShouldCreateBooking_WhenDataIsValid() {
-//        when(userRepository.findById(anyLong())).thenReturn(Optional.of(user));
-//        when(itemRepository.findById(anyLong())).thenReturn(Optional.of(item));
-//        when(bookingMapper.fromInputDto(any(), any(), any())).thenReturn(booking);
-//        when(bookingRepository.save(any())).thenReturn(booking);
-//        when(bookingMapper.toOutputDto(any())).thenReturn(outputDto);
-//
-//        BookingDtoOutput result = bookingService.create(user.getId(), inputDto);
-//
-//        assertNotNull(result);
-//        verify(userRepository).findById(user.getId());
-//        verify(itemRepository).findById(inputDto.getItemId());
-//        verify(bookingMapper).fromInputDto(any(), any(), any());
-//        verify(bookingRepository).save(any());
-//        verify(bookingMapper).toOutputDto(any());
-//    }
-//
-//    @Test
-//    void create_ShouldThrowValidateException_WhenStartAfterEnd() {
-//        inputDto.setStart(LocalDateTime.now().plusDays(3));
-//        inputDto.setEnd(LocalDateTime.now().plusDays(2));
-//
-//        assertThrows(ValidateException.class, () ->
-//                bookingService.create(user.getId(), inputDto)
-//        );
-//    }
-//
-//    @Test
-//    void create_ShouldThrowNotFoundException_WhenUserNotFound() {
-//        when(userRepository.findById(anyLong())).thenReturn(Optional.empty());
-//
-//        assertThrows(NotFoundException.class, () ->
-//                bookingService.create(user.getId(), inputDto)
-//        );
-//    }
-//
-//    @Test
-//    void create_ShouldThrowNotFoundException_WhenItemNotFound() {
-//        when(userRepository.findById(anyLong())).thenReturn(Optional.of(user));
-//        when(itemRepository.findById(anyLong())).thenReturn(Optional.empty());
-//
-//        assertThrows(NotFoundException.class, () ->
-//                bookingService.create(user.getId(), inputDto)
-//        );
-//    }
-//
-//    @Test
-//    void getByID_ShouldReturnBooking_WhenUserIsBookerOrOwner() {
-//        long userID = user.getId();
-//
-//        Booking existingBooking = new Booking();
-//        existingBooking.setId(200L);
-//        existingBooking.setItem(item);
-//        existingBooking.setBooker(user);
-//
-//        when(bookingRepository.findById(existingBooking.getId()))
-//                .thenReturn(Optional.of(existingBooking));
-//        when(userRepository.findById(userID))
-//                .thenReturn(Optional.of(user));
-//        when(bookingMapper.toOutputDto(existingBooking))
-//                .thenReturn(outputDto);
-//
-//        var result = bookingService.getById(userID, existingBooking.getId());
-//
-//        assertNotNull(result);
-//        verify(bookingMapper).toOutputDto(existingBooking);
-//    }
-//}
